traversal.snake.Snake.scala.error
Compilation error:
Snake:4: error: not found: value derriere
  derriere()
  ^Snake:20: error: not found: value baisseBroche
  baisseBroche()
  ^